client/kubernetes/resources-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: default
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client-1
          image: asia-southeast1-docker.pkg.dev/avid-atrium-414511/mugen-fc-repository/client:${IMAGE_TAG}
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "200Mi"
            limits:
              cpu: "200m"
              memory: "400Mi"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
