client/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    cloud.google.com/backend-config: '{"default": "be"}'
  labels:
    app: client
  name: client-service
  namespace: default
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: client
  sessionAffinity: ClientIP
  type: ClusterIP
